@@ -14,39 +14,33 @@ class Acl0001Test extends SeleniumJoomlaTestCase
 	{
 		$this->setUp();
 		$this->gotoAdmin();
-		$this->doAdminLogin();		
-		
+		$this->doAdminLogin();
+				
 		$saltGroup = mt_rand();
 		$groupName = 'Test Administrator Group'.$saltGroup;
-		$groupParent = 'Registered';
-		
+		$groupParent = 'Registered';		
 		$this->createGroup($groupName, $groupParent);		
-		
-        $levelName = 'Special';
+		$levelName = 'Special';
         $this->changeAccessLevel($levelName,$groupName);		
-		
         echo "Change " . $groupName . " article permissions.\n";
 		$this->jClick('Article Manager');
 		$this->jClick('Options');
 		$this->click("//dt[contains(span,'Permissions')]");		
-
 		$i=1;
 		while($i<=6)
   		{		
 			$this->select("//tr[contains(th,'$groupName')]/td[$i]/select", "label=Allow");
   			$i++;
   		}		
-		echo "Saving Article Administrator article permissions\n";
-		
-		
-		
+		echo "Saving Article Administrator article permissions\n";		
 		$this->click("//button[contains(text(),'Save')]");
+		
 		//
 		//	---- No confirmation message exists ----
 		//
+		
 		echo "Allow" . $groupName . " back end access, deny admin access\n";		
 		$this->jClick('Global Configuration');		
-		
 		$this->click("permissions");
 		$this->select("//tr[contains(th,'$groupName')]/td[1]/select", "label=...");
 		$this->select("//tr[contains(th,'$groupName')]/td[2]/select", "label=Allow");
@@ -56,19 +50,18 @@ class Acl0001Test extends SeleniumJoomlaTestCase
 		$this->select("//tr[contains(th,'$groupName')]/td[6]/select", "label=...");
 		$this->select("//tr[contains(th,'$groupName')]/td[7]/select", "label=...");
 		$this->select("//tr[contains(th,'$groupName')]/td[8]/select", "label=...");		
-		sleep(2);
-		
-		$this->jClick('Save & Close');		
-	
+		sleep(2);		
+		$this->jClick('Save & Close');
+				
 		$group = $groupName;
 		$userName = 'Test User' . $saltGroup;
 		$login = 'TestUser' . $saltGroup;
 		$email = $login . '@test.com';
-		$this->createUser($userName, $login, 'password' , $email, $group);		
-
+		$this->createUser($userName, $login, 'password' , $email, $group);
 		$this->gotoAdmin();
 		$this->doAdminLogout();
 		sleep(3);
+		
 		echo("Log in to back end as " . $userName . ".\n");
 		$this->type("mod-login-username", $login);
 		$this->type("mod-login-password", 'password');
@@ -77,24 +70,24 @@ class Acl0001Test extends SeleniumJoomlaTestCase
 		echo("Testing " .  $userName . " access.\n");
 		try
 		{
-			if ($this->isElementPresent("link=User Manager")) echo "User Manager test failed!\n";
-			if ($this->isElementPresent("link=Users")) echo "Users test failed!\n";
-			if ($this->isElementPresent("link=Menus")) echo "Menus test failed!\n";
-			if ($this->isElementPresent("link=Banner")) echo "Banner test failed!\n";
-			if ($this->isElementPresent("link=Contacts")) echo "Contacts test failed!\n";
-			if ($this->isElementPresent("link=Messaging")) echo "Messaging test failed!\n";
-			if ($this->isElementPresent("link=News Feeds")) echo "News Feeds test failed!\n";
-			if ($this->isElementPresent("link=Search")) echo "Search test failed!\n";
-			if ($this->isElementPresent("link=Web Links")) echo "Web Links test failed!\n";
-			if ($this->isElementPresent("link=Redirect")) echo "Redirect test failed!\n";
-			if ($this->isElementPresent("link=Extensions")) echo "Extensions test failed!\n";
-			if ($this->isElementPresent("link=Menu Manager")) echo "Menu Manager test failed!\n";
-			if ($this->isElementPresent("link=Module Manager")) echo "Module Manager test failed!\n";
+			$this->assertFalse($this->isElementPresent("link=User Manager"),'User Manager Access Test Failed');
+			$this->assertFalse($this->isElementPresent("link=Users"),'Users Access Test Failed');
+			$this->assertFalse($this->isElementPresent("link=Menus"),'Menus Access Test Failed');
+			$this->assertFalse($this->isElementPresent("link=Banner"),'Banner Access Test Failed');
+			$this->assertFalse($this->isElementPresent("link=Contacts"),'Contacts Access Test Failed');
+			$this->assertFalse($this->isElementPresent("link=Messaging"),'Messaging Access Test Failed');
+			$this->assertFalse($this->isElementPresent("link=News Feeds"),'News Feeds Access Test Failed');
+			$this->assertFalse($this->isElementPresent("link=Search"),'Search Access Test Failed');
+			$this->assertFalse($this->isElementPresent("link=Web Links"),'Web Links Access Test Failed');
+			$this->assertFalse($this->isElementPresent("link=Redirect",'Redirect Access Test Failed'));
+			$this->assertFalse($this->isElementPresent("link=Extensions"),'Extensions Access Test Failed');
+			$this->assertFalse($this->isElementPresent("link=Menu Manager"),'Menu Manager Access Test Failed');
+			$this->assertFalse($this->isElementPresent("link=Module Manager"),'Module Manager Access Test Failed');
 		}
-		catch (Exception $e)
+			catch (PHPUnit_Framework_AssertionFailedError $e)
 		{
+			array_push($this->verificationErrors, $this->getTraceFiles($e));
 		}
-		sleep(3);
 		$this->click("link=Control Panel");
 		$this->waitForPageToLoad("30000");
 		$this->click("link=Article Manager");
@@ -108,10 +101,10 @@ class Acl0001Test extends SeleniumJoomlaTestCase
 			array_push($this->verificationErrors, $this->getTraceFiles($e));
 		}
 		$this->doAdminLogout();
+		
 		$this->doAdminLogin();
 		$this->deleteTestUsers();
-		$this->gotoAdmin();
-		
+		$this->gotoAdmin();		
 		$this->deleteGroup();		
 		$this->doAdminLogout();
 		$this->countErrors();
