@@ -1,6 +1,7 @@
 <?php
 require_once 'PHPUnit/Framework.php';
 
+require_once JPATH_BASE.'/libraries/joomla/html/parameter/element.php';
 require_once JPATH_BASE.'/libraries/joomla/html/parameter/element/radio.php';
 
 /**
